# django-import-export-gsheets

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/books_project/: manage.py
examples/books_project/books/: admin.py  apps.py  models.py
examples/books_project/example_project/: settings.py  urls.py
examples/example_project/: README.md
examples/example_project/example_project/example_project/: settings.py
import_export_gsheets/: __init__.py  admin.py  forms.py  gsheets.py  utils.py
import_export_gsheets/formats/: gsheets.py
tests/: test_example_books.py
